fix modal button spacing

--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -21,7 +21,7 @@
 #modal-button {
   background-color: #00c0f3;
   border: none;
-  padding: 8px 64px;
+  padding: 8px 58px;
   border-radius: 12px;
 }
 
